# hub_auth

./: .env.example  .gitignore  ADMIN_REFACTORING.md  ADMIN_SSO_GUIDE.md  ADMIN_SSO_SUMMARY.md  API_ENDPOINT_MAPPING.md  COVERAGE_IMPROVEMENT_SUMMARY.md  DATABASE_CONFIG_GUIDE.md  DATABASE_CONFIG_SUMMARY.md  DOCKER.md  DYNAMIC_PERMISSIONS.md  DYNAMIC_PERMISSIONS_SUMMARY.md  Dockerfile  Dockerfile.prod  INSTALLATION.md  INSTALL_IN_EMPLOYEE_MANAGE.md  MANAGEMENT_COMMANDS.md  MANIFEST.in  PUBLISHING_GUIDE.md  QUICKSTART.md  README.md  README_PACKAGE.md  RELEASE.md  RLS_ADMIN_GUIDE.md  RLS_GUIDE.md  RLS_SUMMARY.md  SECURITY.md  START_HERE.md  TEST_FIXES_SUMMARY.md  TEST_RESULTS.md  TEST_SUITE_SUMMARY.md  build_and_install.ps1  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  fix-flake8-comprehensive.ps1  fix-flake8.ps1  fix_e501.py  manage.py  pyproject.toml  (+13 more)
.github/: dependabot.yml
authentication/: client.py  models.py  permissions.py  services.py  views.py
docs/: BADGES.md  CI_CD_SECURITY.md  INTEGRATED_WORKFLOW.md  WORKFLOW_DIAGRAM.txt
examples/: .env.example  example_admin_sso_settings.py  example_admin_sso_urls.py  example_database_config.py  example_settings.py  example_settings_rls.py  example_urls.py  example_views.py  example_views_rls.py
hub_auth/: asgi.py  settings.py
hub_auth_client/: __init__.py  exceptions.py  validator.py
hub_auth_service/: .dockerignore  README.md  SCHEMA_SETUP.md  default.conf  nginx.conf  requirements.txt
scripts/: bump_version.py  local_publish.ps1  pre-commit-check.ps1
services/: sync_service.py
tests/: conftest.py  requirements-test.txt  test_admin_helpers.py  (+14 more)
(+61 files in other folders)
