[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hub-auth-client"
version = "1.0.38"
description = "MSAL JWT validation library with Entra ID RBAC support"
readme = "README_PACKAGE.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "rparrish-5542", email = "rparrish@example.com"}
]
keywords = ["msal", "jwt", "azure", "entra", "authentication", "rbac", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]

dependencies = [
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
django = [
    "Django>=4.2",
]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rparrish-5542/hub_auth"
Documentation = "https://github.com/rparrish-5542/hub_auth/blob/main/README_PACKAGE.md"
Repository = "https://github.com/rparrish-5542/hub_auth"
Issues = "https://github.com/rparrish-5542/hub_auth/issues"

[tool.setuptools]
packages = ["hub_auth_client"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
